tooling/nargo_cli/tests/snapshots/execution_success/assign_ex/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field) {
    let mut z: Field = x + y;
    assert(z == 3);
    z = x * y;
    assert(z == 2);
    regression_3057();
}

fn regression_3057() {
    let mut array: [[i32; 2]; 2] = [[0, 1], [2, 3]];
    array[0][1] = 2;
    assert(array[0][1] == 2);
}
